; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_messages.c_vlc_LogInit.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_messages.c_vlc_LogInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_logger = type { i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@discard_log = common dso_local global %struct.vlc_logger zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_LogInit(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.vlc_logger*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = call i32 @VLC_OBJECT(%struct.TYPE_6__* %4)
  %6 = call %struct.vlc_logger* @vlc_LogModuleCreate(i32 %5)
  store %struct.vlc_logger* %6, %struct.vlc_logger** %3, align 8
  %7 = load %struct.vlc_logger*, %struct.vlc_logger** %3, align 8
  %8 = icmp eq %struct.vlc_logger* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.vlc_logger* @discard_log, %struct.vlc_logger** %3, align 8
  br label %10

10:                                               ; preds = %9, %1
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.vlc_logger*, %struct.vlc_logger** %3, align 8
  %16 = call i32 @vlc_LogSwitch(i32 %14, %struct.vlc_logger* %15)
  ret void
}

declare dso_local %struct.vlc_logger* @vlc_LogModuleCreate(i32) #1

declare dso_local i32 @VLC_OBJECT(%struct.TYPE_6__*) #1

declare dso_local i32 @vlc_LogSwitch(i32, %struct.vlc_logger*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
